<resources>
    <string name="app_name">AQHI</string>

    <string name="widget_title">AQHI Widget</string>
    <string name="widget_aqhi_label">AQHI:</string>

    <string name="main_activity_aqhi_title">Canada AQHI Lookup</string>
    <string name="Location_perm_required">Location permission is required for auto-discovery.</string>
    <string name="Location_perm_required_full">Location permission is required to determine the nearest AQHI observation station.</string>
    <string name="aqhi_widget_logo">AQHI Widget Logo</string>
    <string name="unknown">Unknown</string>
    <string name="the_current_aqhi_value">The current AQHI value.</string>
    <string name="aqhi_linear_scale">AQHI linear scale.</string>
    <string name="copyright_notice">© 2025 David Fortin</string>
    <string name="aqhi_historical_trend">AQHI History</string>
    <string name="historical_trend_heatmap">Historical Trend Heatmap</string>
    <string name="aqhi_forecast_maximums">AQHI Forecast</string>
    <string name="aqhi_meter_graph">Current AQHI Meter Graph</string>
    <string name="current_aqhi">Current AQHI</string>
    <string name="change_location">Change Location</string>
    <string name="change_location_colon">Change Location:</string>
    <string name="location">Location</string>
    <string name="forecast_heat_map">Forecast Heat Map</string>
    <string name="daily_maximums">Daily Maximums:</string>
    <string name="hourly_forecast">Hourly Forecast:</string>
    <string name="preview">Preview:</string>
    <string name="automatic">Automatic</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="light_dark_mode">Light/Dark Mode:</string>
    <string name="background_transparency">Background Transparency:</string>
    <string name="observations_at">Observations as of</string>
    <string name="observations_at_station">Observations as of %s at the %s station</string>
    <string name="updated_at">Updated at</string>
    <string name="widget_preview">Widget Preview</string>
    <string name="unknown_Location">Unknown</string>
    <string name="about_aqhi">About AQHI</string>
    <string name="close">Close</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="hourly_history">Hourly History:</string>
    <string name="low_risk">Low Risk</string>
    <string name="type_or_select_location">Type or select a location on the map</string>
    <string name="typical">Typical:</string>
    <string name="alerts">Alerts</string>
    <string name="aqhi_emoji">AQHI Emoji</string>
    <string name="map">Pollution Map</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
</resources>