<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_activity_background"
    tools:context=".main.AQHILocationActivity">
    <include
        android:id="@+id/header_bar"
        layout="@layout/header_layout"/>

    <ScrollView
        android:id="@+id/body_outer_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header_bar"
        app:layout_constraintBottom_toTopOf="@id/btnSaveLocation"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/header_bar"
        android:padding="10dp">

        <!-- Title -->
        <TextView
            android:id="@+id/lblChangeLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingBottom="8dp"
            android:text="@string/change_location"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Toggle for Automatic vs Manual -->
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swtAutomatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/automatic"
            android:layout_marginBottom="8dp"/>

        <!-- Location Dropdown -->
        <AutoCompleteTextView
            android:id="@+id/ddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_or_select_location"
            android:layout_marginBottom="8dp" />

        <ovh.plrapps.mapview.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="0dp"/>

    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnSaveLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintBottom_toTopOf="@+id/footer_bar"/>

    <include
        android:id="@+id/footer_bar"
        layout="@layout/footer_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>