<?xml version="1.0" encoding="utf-8"?>
<!-- Footer -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/footer_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="0dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingBottom="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:background="@color/main_activity_header_background">

    <TextView
        android:id="@+id/lblNotices"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:gravity="start|center"
        android:maxLines="1"
        android:onClick="showLegalNotices"
        android:text="@string/copyright_notice"
        android:textColor="@color/main_activity_action_text"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/lblAbout"
        android:layout_width="wrap_content"
        android:layout_height="28sp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:text="@string/about_aqhi"
        android:textSize="11sp"
        android:maxLines="1"
        android:textColor="@color/main_activity_action_text"
        android:onClick="showAbout"
        />

    <TextView
        android:id="@+id/lblPrivacy"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:gravity="end|center"
        android:maxLines="1"
        android:onClick="showPrivacy"
        android:text="@string/privacy"
        android:textColor="@color/main_activity_action_text"
        android:textSize="11sp" />
</LinearLayout>